<resources>
    <string name="app_name">DigitalAWC</string>
    <string name="tv_login_userid">UserId</string>
    <string name="tv_login_password">Password</string>
    <string name="btn_signin">Sign In</string>
    <string name="not_registered_user">New User ?</string>
    <string name="not_registered_admin">New Admin ?</string>
    <string name="tv_signup_user">Sign Up</string>
    <string name="tv_signup_admin">Sign Up</string>
    <string name="tv_registration_name">Name</string>
    <string name="tv_registration_address">Address</string>
    <string name="tv_registration_city">City</string>
    <string name="tv_registration_location">Location</string>
    <string name="tv_registration_user_type">Type of User</string>
    <string name="tv_registration_mobile">Mobile</string>
    <string name="tv_registration_email">Email</string>
    <string name="tv_registration_admin_id">ID</string>
    <string name="btn_register">Register</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="tv_signin">Sign In</string>
    <string name="welcome_digital_anganwadi_centre">Digital Anganwadi Centre</string>
    <string name="tv_registration_password">Password</string>
    <string name="imgview_welcome">welcome</string>
    <string name="tv_new_password">New Password</string>
    <string name="tv_confirm_new_password">Confirm Password</string>
    <string name="btn_change_password">Change Password</string>
    <string name="forgot_password">Forgot Password ?</string>

    <string-array name="select_user_type">
        <item></item>
        <item>Anganwadi Admin</item>
        <item>Anganwadi User</item>

    </string-array>
    <string-array name="select_user_category">
        <item></item>
        <item>Not Applicable</item>
        <item>Pregnant</item>
        <item>Child</item>
    </string-array>
    <string-array name="select_scheme">
        <item></item>
        <item>Users</item>
        <item>Events</item>
    </string-array>

    <string name="title_activity_dashboard_user">DashboardUserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Digital AWC</string>
    <string name="nav_header_subtitle">Dashboard</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_myawc">My AWC</string>
    <string name="menu_notification_user">Notifications</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_myprofile">My Profile</string>
    <string name="menu_share">Share</string>
    <string name="menu_grievances">Grievances</string>
    <string name="menu_admin_profile">Admin Profile</string>
    <string name="menu_myschemes">My Schemes</string>
    <string name="tv_registration_user_category">Select Category</string>
    <string name="display_text">UserId is your mobile number</string>
    <string name="display_text_1">You can change your password anytime from Dashboard</string>
    <string name="tv_login_to_continue">Login to Continue</string>
    <string name="menu_myschemes_user">UserSchemes</string>

</resources>
