<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_admin"
    app:startDestination="@+id/nav_admin_profile">

    <fragment
        android:id="@+id/nav_myawc_admin"
        android:name="com.example.digitalawc.myawc.MyAwcAdminfragment"
        android:label="@string/menu_myawc"
        tools:layout="@layout/fragment_myawc" />

    <fragment
        android:id="@+id/nav_admin_profile"
        android:name="com.example.digitalawc.profile.AdminProfilefragment"
        android:label="@string/menu_admin_profile"
        tools:layout="@layout/fragment_admin_profile" />
    <fragment
        android:id="@+id/nav_schemes"
        android:name="com.example.digitalawc.schemes.SchemesAdminfragment"
        android:label="@string/menu_myschemes"
        tools:layout="@layout/fragment_schemes" />


</navigation>