<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="298dp"
        tools:layout_editor_absoluteY="160dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingTop="15dp"
            android:text="@string/tv_login_userid"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#E91E63" />

        <EditText
            android:id="@+id/et_userid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"

            tools:visibility="visible" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="298dp"
        tools:layout_editor_absoluteY="160dp"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingTop="15dp"
            android:text="@string/tv_login_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#E91E63" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:visibility="visible" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:text="@string/btn_signin"
        android:textColor="#E91E63"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="220dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered_user"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4pt"
            android:onClick="processSignUpLinkClick"
            android:text="@string/tv_signup_user"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginStart="220dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered_admin"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4pt"
            android:onClick="processSignUpLinkClickAdmin"
            android:text="@string/tv_signup_admin"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:onClick="processForgotPasswordLinkClick"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
</LinearLayout>