<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgnd"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="300dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/display_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#E91E63">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/display_text_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#E91E63">

    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:onClick="processSignInLinkClickDisplay"
        android:text="@string/tv_login_to_continue"
        android:textColor="@color/design_default_color_primary"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>