<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="298dp"
        tools:layout_editor_absoluteY="160dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingTop="15dp"
            android:text="@string/tv_login_userid"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#E91E63" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="298dp"
        tools:layout_editor_absoluteY="160dp"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingTop="15dp"
            android:text="@string/tv_new_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#E91E63" />

        <EditText
            android:id="@+id/et_newpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="298dp"
        tools:layout_editor_absoluteY="160dp"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingTop="15dp"
            android:text="@string/tv_confirm_new_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#E91E63" />

        <EditText
            android:id="@+id/et_confirmnewpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:text="@string/btn_change_password"
        android:textColor="#E91E63"
        android:gravity="center"
        android:onClick="processChangePasswordButtonClick"/>

</LinearLayout>